--- a/typo3conf/ext/wpj/Resources/Private/Partials/navigation_wiki.html
+++ b/typo3conf/ext/wpj/Resources/Private/Partials/navigation_wiki.html
@@ -3,8 +3,8 @@
 <!--
 	<wpj:menu controller="map" action="index">Karte</wpj:menu>
 -->
-	<wpj:menu controller="article" action="index" customclass="wpj-item">Lexikon</wpj:menu>
-	<wpj:menu controller="article" action="exhibition" customclass="wpj-item">Galerie</wpj:menu>
+	<wpj:menu controller="article" action="index" customclass="wpj-item item-knowledge">Lexikon</wpj:menu>
+	<wpj:menu controller="article" action="exhibition" customclass="wpj-item item-exhibition">Galerie</wpj:menu>
 
 	<li id="searchbox">
 		<f:form method="post" controller="search" name="demand" object="{demand}">
