--- a/typo3conf/ext/wpj/Resources/Public/less/style.less
+++ b/typo3conf/ext/wpj/Resources/Public/less/style.less
@@ -538,6 +538,25 @@ h2 {
 	}
 }
 
+.mediafile {
+	position: relative;
+	width: 220px;
+	height: 220px;
+	text-align: center;
+	border: 1px solid #ccc;
+	margin: 0 10px 10px 0;
+	float: left;
+	img {
+		display: inline-block;
+		margin-top: 10px;
+	}
+}
+
+.ui-widget-content {
+	color: @black !important;
+	font-size: .82em;
+}
+
 #login-form {
 	padding: 1.5em 1em 1em 1em;
 	background: #fff;
@@ -1031,32 +1050,6 @@ ul.tagit input[type="text"] {
 		color: @wpj_blue;
 		padding: .4em .7em .2em .7em;
 	}
-
-/*
-	.pagination {
-		margin: 1em 0;
-		font-family: @fonts_serif;
-		li.current {
-			font-weight: bold;
-			color: @wpj_brown;
-		}
-	}
-
-
-
-	.pagination.top {
-		margin: 0;
-	}
-
-
-	.f3-widget-paginator { list-style: none; margin: 0; padding: 0; margin: 10px; text-align: center; }
-	.f3-widget-paginator li { display: inline; margin: 0 .3em; }
-	.exhibition .pagination {
-
-		li.current {
-			color: darken(@wpj_brown, 30%);
-		}
-*/
 }
 
 table { margin: 0 0 1.2em 0; width: 960px;}
