fixed button min-width in tablecells

--- a/typo3conf/ext/wpj/Resources/Public/less/style.less
+++ b/typo3conf/ext/wpj/Resources/Public/less/style.less
@@ -1148,7 +1148,9 @@ a.wpj-button {
 		color: #e3007a;
 	}
 }
-
+td .wpj-button {
+	min-width: 0;
+}
 //---------------------------------------------------------------- TWITTER BOOTSTRAP ELEMENTS -------------------------------
 
 // Twitter Bootstrap Vars
