--- a/typo3conf/ext/wpj/Resources/Public/less/style.less
+++ b/typo3conf/ext/wpj/Resources/Public/less/style.less
@@ -925,8 +925,8 @@ ul.tagit input[type="text"] {
 		width: 60px;
 		height: 45px;
 		position: absolute;
-		top: 5px;
-		right: 20px;
+		top: 10px;
+		right: 30px;
 		z-index: 1000;
 	}
 
@@ -937,12 +937,13 @@ ul.tagit input[type="text"] {
 	#usr-bar {
 		display: block;
 		background: #DCE2E5;
-		padding: .5em 2px;
-		margin-bottom: 1em;
+		padding: 1em 20px;
 		border-bottom: 1px solid @grey;
 		font-size: .78em;
 		color: #666;
 		text-align: center;
+		position: relative;
+		z-index: 9999;
 	}
 	
 	.welcome {
@@ -970,7 +971,7 @@ ul.tagit input[type="text"] {
 		font-size: .78em;
 		display: block;
 		width: 70%;
-		margin: 0 0 .3em .5em;
+		margin: .5em 0 .3em .5em;
 	}
 	#nav-wiki li {
 		float: none;
