--- a/typo3conf/ext/wpj/Resources/Private/Templates/article/loadVersionsBox.html
+++ b/typo3conf/ext/wpj/Resources/Private/Templates/article/loadVersionsBox.html
@@ -5,7 +5,7 @@
 	<li>
 		{version.versionLabel} <br/>
 		{version.versionDescription}
-		<f:link.action controller="article" action="compareVersions" arguments="{article : article, version: version}" target="_blank">
+		<f:link.action controller="article" action="compareVersions" arguments="{article : article, version_id: version}" target="_blank">
 			vergleichen
 		</f:link.action>
 		
