added map link in wiki navigation

--- a/typo3conf/ext/wpj/Resources/Private/Partials/navigation_wiki.html
+++ b/typo3conf/ext/wpj/Resources/Private/Partials/navigation_wiki.html
@@ -5,7 +5,7 @@
 -->
 	<wpj:menu controller="article" action="index" customclass="wpj-item item-knowledge">Lexikon</wpj:menu>
 	<wpj:menu controller="article" action="exhibition" customclass="wpj-item item-exhibition">Galerie</wpj:menu>
-
+	<li class="wpj-item"><f:link.action controller="map" action="index" section="showMap">Karte</f:link.action></li>
 	<li id="searchbox">
 		<f:form method="post" controller="search" name="demand" object="{demand}">
 			<f:form.hidden id="scopeField" property="scope" />
