WPJ Fixes Karte

--- a/typo3conf/ext/wpj/Resources/Public/less/map-mobile-style.less
+++ b/typo3conf/ext/wpj/Resources/Public/less/map-mobile-style.less
@@ -220,6 +220,7 @@ ul.itemlist {
   right: 20px;
   overflow: auto;
 }
+
 .scroll-content {
   position: absolute;
   z-index: 1;
@@ -243,6 +244,20 @@ li {
   background-color: #fafafa;
   font-size: 14px;
 }
+
+
+#article-scroll-wrapper {
+  li {
+		height: auto;
+		line-height: auto;
+	}
+
+	img {
+		display: block;
+		margin: .5em auto .2em auto;
+	}
+}
+
 .overlay {
   background-color: #fff;
   bottom: 40px;
